updated home page img + added and fixed alignment of contact info on contact page

--- a/New Site/assets/css/style.css
+++ b/New Site/assets/css/style.css
@@ -315,17 +315,18 @@ a:hover {
 }
 
 #hero-area h1 {
-  font-size: 40px;
+  font-size: 50px;
   line-height: 50px;
   color: #333;
   font-weight: 700;
   margin-bottom: 15px;
+  
   text-transform: uppercase;
 }
 
 #hero-area h2 {
   font-size: 22px;
-  font-weight: 300;
+  font-weight: bold;
   margin-bottom: 38px;
   line-height: 27px;
   text-transform: uppercase;
@@ -804,6 +805,7 @@ article {
 
 #clients {
   padding: 30px 0 60px;
+  
 }
 
 #contact-section {
@@ -1329,3 +1331,10 @@ ul.social-icons li {
 }
 
 /*# sourceMappingURL=maps/style.css.map */
+
+
+/* ADD BY SASH */
+.main-img{
+  padding-top: 120px;
+}
+
